[workspace]
members = [
    "rust",
] 

[patch.crates-io]
# If we don't use this exact rev the semver of cargo will screw up
chrono = { git = "https://github.com/shards-lang/chrono", rev = "b1d74aef688c27fccc738c64746535905903471a" }
tar = { git = "https://github.com/shards-lang/tar-rs", rev = "6d26c0d1724326c8c1b06eaafc25a19253afbcdc" }
