[package]
name = "chainblocks"
description = "rust bindings and utility in order to use chainblocks"
license = "BSD-3-Clause"
version = "0.1.0"
authors = ["Giovanni Petrantoni <sinkingsugar@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
approx = "0.5.0"
lazy_static = "1.4.0"
compile-time-crc32 = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.64" }
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"], optional = true }
libsecp256k1 = { version = "0.7.0", optional = true }
hex = { version = "0.4.2", optional = true }
crossbeam = { version = "0.8.1", optional = true }
rapier3d = { version = "0.11.1", optional = true }
bs58 = { version = "0.4.0", optional = true }
sha2 = { version = "0.9.3", optional = true }
wasabi_leb128 = { version = "0.4.0", optional = true }
resvg = { version = "0.19.0", optional = true }
usvg = { version = "0.19.0", optional = true }
tiny-skia = { version = "0.6.1", optional = true }
instant = { version = "0.1.10", features = [ "now" ] }
ethereum-types = { version = "0.12.0", optional = true }
ethabi = { version = "15.0.0", optional = true }
csv = { version = "1.1", optional = true }
sp-core = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-11-1', features = ["full_crypto"], optional = true }
sp-runtime = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-11-1', optional = true }
parity-scale-codec = { version = "2.3.1", default-features = false, optional = true }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
dlopen = { version = "0.1.8", optional = true }
reqwest = { version = "0.11.0", features = ["blocking"], optional = true }

[target.'cfg(not(any(target_arch="wasm32", target_os="ios")))'.dependencies]
webbrowser = { version = "0.5.5", optional = true }

[dev-dependencies]
ctor = "0.1.16"

[build-dependencies]
bindgen = { version = "0.59.1", optional = true }

[features]
default = []
dummy = []
blocks = ["reqwest",
          "tiny-keccak",
          "libsecp256k1",
          "hex",
          "rapier3d",
          "crossbeam",
          "webbrowser",
          "bs58",
          "sha2",
          "wasabi_leb128",
          "usvg",
          "resvg",
          "tiny-skia",
          "ethabi",
          "ethereum-types",
          "csv",
          "sp-core",
          "sp-runtime",
          "parity-scale-codec"]
dllblock = ["dlopen"]
run_bindgen = ["bindgen"]
cblisp = []

[profile.release]
panic = "abort"